# IMAGELibrary

./: CMakeLists.txt  DFTCalculator.hpp  GrayscaleConverter.hpp  IDFTCalculator.hpp  IPGMFilter.hpp  IPGMProcessor.hpp  IPPMFilter.hpp  IPPMProcessor.hpp  PGMFilterBlur.hpp  PGMFilterSobel.hpp  PGMProcessor.hpp  PPMFilterBlur.hpp  PPMFilterDFT.hpp  PPMFilterGrayscaleConverter.hpp  PPMFilterSobel.hpp  PPMProcessor.hpp  main.cpp  pixeltype.h
